# nico

./: .env.example  .gitignore  CLOUD_GUIDE.md  Dockerfile  OLLAMA_GUIDE.md  PHONE_GUIDE.md  PI_WEB_GUIDE.md  README.md  README_NICO.md  REPLIT_GUIDE.md  get_assistant_token.py  install.sh  main.py  nico-launcher.sh  nico.desktop  nico.service  pyproject.toml  setup_assistant.py  setup_pi.sh  start_pi.sh
deploy/: README.md  cloud-install.sh  nico-cloud-client.service  nico-cloud-server.service
examples/: run_demo.py
nico/: __init__.py  app.py  bootstrap.py  cli.py  cloud_client.py  config_profiles.py  context.py  events.py  gui.py  lifecycle.py  notifications.py  orchestrator.py  pi_runtime.py  plugin.py  plugin_manager.py  registry.py  scheduler.py  web_api.py  webui.py
nico/audio/: __init__.py  audio_output.py  microphone.py  speech_to_text.py  text_to_speech.py  voice_pipeline.py  wakeword.py
nico/brain/: claude_provider.py  gemini_provider.py  google_assistant_provider.py  ollama_provider.py  openai_provider.py  provider.py  router.py
nico/config/: prompts.py  settings.py
nico/hardware/: display.py  leds.py  sensors.py  system.py
nico/memory/: conversation.py  embeddings.py  long_term.py  manager.py  persistence.py
nico/tests/: test_app.py  test_app_context_flow.py  test_app_flow.py  test_app_integration_routing.py  test_app_voice.py  test_audio.py  test_audio_enhanced.py  test_audio_events.py  test_bootstrap.py  test_bootstrap_runtime.py  test_cli.py  test_cli_app_integration.py  test_cli_e2e.py  test_cli_profile_file.py  test_cli_run_integration.py  test_cli_runtime.py  test_cli_validation.py  test_config_profiles.py  test_config_prompts.py  test_config_settings.py  test_context.py  test_context_enhanced.py  test_conversation_memory_enhanced.py  test_file_profiles.py  test_google_assistant_integration.py  test_google_credentials.py  test_hardware.py  test_hardware_system.py  test_integrations.py  test_integrations_dispatch.py  test_lifecycle.py  (+38 more)
packaging/: build-deb.sh
profiles/: default.json  minimal.json  voice.json
(+37 files in other folders)
